--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "aws-amplify": "^3.0.12",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bulma": "^0.8.2",
+    
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
