--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-chartjs": "^1.2.0",
     "react-chartjs-2": "^2.9.0",
     "react-component-queries": "^2.3.0",
+    "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.0.0",
     "react-grid-layout": "^0.18.3",
