--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "Faker": "^0.7.2",
     "aws-amplify": "^3.0.16",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
@@ -36,7 +35,7 @@
     "react-infinite-calendar": "^2.3.1",
     "react-notification-system": "^0.4.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "react-simple-maps": "^2.1.2",
     "react-sizeme": "^2.6.12",
     "reactstrap": "^8.5.0",
